# this_studio

./: SPH.h  SPHHandler.h  SPHIntegration.cu  SPHNeighborSearch.cu  SPHSolver.h  WCSPHSolver.h  damBreak.cpp
DEM/: 11BondedBallsBeam.cpp  CMakeLists.txt  ballFalling.cpp  damBreak.cpp  elasticBounce.cpp  test.cpp
DEM-CFD/: CMakeLists.txt  problem.cpp  test.cpp
DEM-CFD/kernel/: DEMHandler.cpp  DEMHandler.h  DEMIntegration.cu  DEMIntegration.h  DEMSolver.cpp  DEMSolver.h  integration.cu  integration.h  neighborSearch.cu  neighborSearch.h  solidParticleHandler.cpp  solidParticleHandler.h  solverParams.h  wallHandler.cpp  wallHandler.h
DEM-CFD/kernel/myContainer/: myContactModelParams.h  myHash.h  myInteraction.h  myParticle.h  mySpatialGrid.h  myWall.h
DEM-CFD/kernel/myContainer/myUtility/: myCUDA.h  myMat.h  (+3 more)
DEM/kernel/: DEMBallMeshWallSolver.h  DEMBallSolver.cpp  DEMBallSolver.h  DEMBaseSolver.cpp  DEMBaseSolver.h  DEMClumpMeshWallSolver.h  DEMClumpSolver.h  SPHHandler.h  SPHSolver.h  WCSPHHandler.h  WCSPHSolver.h  ballHandler.cpp  ballHandler.h  ballIntegration.cu  ballIntegration.h  ballMeshWallIntegration.cu  ballMeshWallIntegration.h  ballMeshWallNeighbor.cu  ballMeshWallNeighbor.h  ballNeighborSearch.cu  ballNeighborSearch.h  biuldHashStartEnd.cu  buildHashStartEnd.h  clumpHandler.h  contactModelHandler.h  contactModelParams.h  solverParams.h  wallHandler.h
DEM/kernel/cudaKernel/: GPUConfig.h  SPHIntegration.cu  SPHIntegration.h  SPHNeighborSearch.cu  SPHNeighborSearch.h  ballIntegration.cu  ballIntegration.h  ballMeshWallIntegration.cu  ballMeshWallIntegration.h  ballMeshWallNeighbor.cu  ballMeshWallNeighbor.h  ballNeighborSearch.cu  ballNeighborSearch.h  biuldHashStartEnd.cu  buildHashStartEnd.h
DEM/kernel/myStruct/: interaction.h  particle.h  spatialGrid.h  wall.h
DEMSPH/: .clangd  CMakeLists.txt  README.md  bondedBeam.cpp  bondedParticleBeam.cpp  damBreak.cpp  elasticBounce.cpp  externalForceTorque.cu  externalForceTorque.h  iceCylinderInteraction.cpp  pointCloudGeneration.h
DEMSPH/bondedBeam/: ball_0001.vtu  ball_0002.vtu  ball_0003.vtu  ball_0004.vtu  ball_0005.vtu  ball_0006.vtu  ball_0007.vtu  ball_0008.vtu  ball_0009.vtu  ball_0010.vtu
DEMSPH/damBreak/: SPH_0000.vtu  SPH_0001.vtu  SPH_0002.vtu  SPH_0003.vtu  SPH_0004.vtu  SPH_0005.vtu  SPH_0006.vtu  SPH_0007.vtu  SPH_0008.vtu  SPH_0009.vtu  SPH_0010.vtu  SPH_0011.vtu  SPH_0012.vtu  SPH_0013.vtu  SPH_0014.vtu  SPH_0015.vtu  SPH_0016.vtu  SPH_0017.vtu  SPH_0018.vtu  SPH_0019.vtu  SPH_0020.vtu  SPH_0021.vtu  SPH_0022.vtu  SPH_0023.vtu  SPH_0024.vtu  SPH_0025.vtu  SPH_0026.vtu  SPH_0027.vtu  SPH_0028.vtu  SPH_0029.vtu  SPH_0030.vtu  SPH_0031.vtu  SPH_0032.vtu  SPH_0033.vtu  SPH_0034.vtu  SPH_0035.vtu  SPH_0036.vtu  SPH_0037.vtu  SPH_0038.vtu  SPH_0039.vtu  (+54 more)
DEMSPH/elasticBounce/: ball_0001.vtu  ball_0007.vtu  ball_0013.vtu  ball_0015.vtu  ball_0022.vtu  ball_0023.vtu  ball_0025.vtu  ball_0028.vtu  ball_0031.vtu  ball_0045.vtu  ball_0046.vtu  ball_0047.vtu  ball_0048.vtu  ball_0049.vtu  ball_0050.vtu  ball_0051.vtu  ball_0052.vtu  ball_0053.vtu  ball_0054.vtu  ball_0055.vtu  ball_0056.vtu  ball_0057.vtu  ball_0058.vtu  ball_0059.vtu  ball_0060.vtu  ball_0061.vtu  ball_0062.vtu  ball_0063.vtu  ball_0064.vtu  ball_0065.vtu  ball_0066.vtu  ball_0067.vtu  ball_0068.vtu  ball_0069.vtu  ball_0070.vtu  ball_0071.vtu  ball_0072.vtu  ball_0073.vtu  ball_0074.vtu  ball_0075.vtu  (+247 more)
DEMSPH/iceCylinderInteraction/: ballTriangleInteraction_0000.vtu  ballTriangleInteraction_0001.vtu  ballTriangleInteraction_0002.vtu  ballTriangleInteraction_0003.vtu  ballTriangleInteraction_0004.vtu  ballTriangleInteraction_0005.vtu  ballTriangleInteraction_0006.vtu  ballTriangleInteraction_0007.vtu  ballTriangleInteraction_0008.vtu  ballTriangleInteraction_0009.vtu  ballTriangleInteraction_0010.vtu  ballTriangleInteraction_0011.vtu  ballTriangleInteraction_0012.vtu  ballTriangleInteraction_0013.vtu  ballTriangleInteraction_0014.vtu  ballTriangleInteraction_0015.vtu  ballTriangleInteraction_0016.vtu  ballTriangleInteraction_0017.vtu  ballTriangleInteraction_0018.vtu  ballTriangleInteraction_0019.vtu  ballTriangleInteraction_0020.vtu  ballTriangleInteraction_0021.vtu  ballTriangleInteraction_0022.vtu  ballTriangleInteraction_0023.vtu  ballTriangleInteraction_0024.vtu  ballTriangleInteraction_0025.vtu  ballTriangleInteraction_0026.vtu  ballTriangleInteraction_0027.vtu  ballTriangleInteraction_0028.vtu  ballTriangleInteraction_0029.vtu  ballTriangleInteraction_0030.vtu  ballTriangleInteraction_0031.vtu  ballTriangleInteraction_0032.vtu  ballTriangleInteraction_0033.vtu  ballTriangleInteraction_0034.vtu  ballTriangleInteraction_0035.vtu  ballTriangleInteraction_0036.vtu  ballTriangleInteraction_0037.vtu  ballTriangleInteraction_0038.vtu  ballTriangleInteraction_0039.vtu  (+188 more)
DEMSPH/kernel/: DEMSolver.h  SPHNeighborSearchKernel.cu  SPHNeighborSearchKernel.h  WCSPHIntegrationKernel.cu  WCSPHIntegrationKernel.cuh  WCSPHSolver.h  ballIntegrationKernel.cu  ballIntegrationKernel.cuh  ballIntegrationKernel.h  ballNeighborSearchKernel.cu  ballNeighborSearchKernel.cuh  ballNeighborSearchKernel.h  boundary.h  buildHashStartEnd.cu  buildHashStartEnd.h  contactKernel.cu  contactKernel.cuh  contactKernel.h  contactParameters.h  interaction.h  neighborSearchKernel.cu  neighborSearchKernel.h  particle.h  wall.h  wallIntegrationKernel.cu  wallIntegrationKernel.h
DEMSPH/kernel/myUtility/: myHostDeviceArray.h  myMat.h  myQua.h
SPH/: CMakeLists.txt  damBreak.cpp
SPH/damBreak/: SPH_0000.vtu  dummy_0000.vtu
SPH/kernel/: DEMSolver.h  GPUConfig.h  SPH.h  SPHIntegration.cu  SPHIntegration.h  SPHNeighborSearch.cu  SPHNeighborSearch.h  SPHNeighborSearchKernel.cu  SPHNeighborSearchKernel.h  WCSPHHandler.h  WCSPHIntegrationKernel.cu  WCSPHIntegrationKernel.h  WCSPHSolver.h  ballNeighborSearchKernel.cu  boundary.h  buildHashStartEnd.cu  buildHashStartEnd.h  contactKernel.cu  contactKernel.h  contactParameters.h  interaction.h  neighborSearchKernel.cu  neighborSearchKernel.h  particle.h  wall.h
SPH/kernel/myUtility/: myFileEdit.h  myHostDeviceArray.h  myVec.h
(+18 files in other folders)
